<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:paddingVertical="64dp">


    <ImageView
        android:id="@+id/img_coffe"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/img_coffe_cup" />

    <TextView
        android:id="@+id/txt_title_coffe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/title_slider"
        android:textAlignment="center"
        android:textColor="#333333"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_desc_coffe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/desc_slider"
        android:textAlignment="center"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_started"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/green"
        android:text="@string/btn_get_started"
        android:textColor="@color/white" />

</LinearLayout>
